Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-53409

can't paste image from clipboard to web page.

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.6.2
    • 5.6.0
    • WebEngine
    • None
    • win10,qtwebengine 5.6 ,Chromium 44
    • f4b806ffbc2f11a5a64fab2856dfe68ae7d603c8

    Description

      I can't paste image to webpage when I copy images from any other webpage.
      it's work fine in Chromium.

      you can open otherbrowser example and use this website to test it.
      Test website: https://codepen.io/netsi1964/pen/IoJbg

      Attachments

        1. 1.png
          419 kB
          Carter Davies
        2. 2.png
          195 kB
          Carter Davies
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            jbornema Joerg Bornemann
            vidarxu Carter Davies
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes