Fix pasting images to web pages

WebKit expects pasted images to have the MIME type image/png (see code
and comment in DataObjectItem::getAsFile()).

Task-number: QTBUG-53409
Change-Id: I2b0c1244d309687ad190db26c5b00718ed0c4258
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>